# ScatterSearch

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: annsearch.h  distance.h  util.h
observation/: calculate_stage_ratio.py  deep_16t_first_stage_ndc.csv  deep_16t_two_stage_ndc_my.csv  deep_4t_first_stage_ndc.csv  deep_4t_two_stage_ndc_my.csv  deep_8t_first_stage_ndc.csv  deep_8t_two_stage_ndc_my.csv  deep_sequential_two_stage_ndc.csv  laion_8t_two_stage_ndc_my.csv  t2i_16t_two_stage_ndc_my.csv  t2i_2thread_two_stage_ndc.csv  t2i_4t_two_stage_ndc_my.csv  t2i_4thread_two_stage_hop.csv  t2i_4thread_two_stage_ndc.csv  t2i_8t_two_stage_ndc_my.csv  t2i_8thread_two_stage_ndc.csv  t2i_sequential_two_stage_ndc.csv
scripts/: different_k.sh  edge_wise_search.sh  hdf5tofbin.py  hop_find_first_knn.sh  intraxinter.sh  low_q_graph.sh  multi_turn_search.sh  online_parallel_search.sh  online_pipeline_et_search.sh  online_pipeline_search.sh  parallel_search.sh  perf.sh  pipeline_et_search.sh  pipeline_search.sh  pthread_search.sh  scalability.sh  search.sh  single_query.sh  splitfbin.py
src/: CMakeLists.txt  annsearch.cpp  distance.cpp  util.cpp
tests/: CMakeLists.txt  hop_find_first_knn.cpp  intraxinter.cpp  multi_turn_search.cpp  online_parallel_search.cpp  online_pipeline_et_search.cpp  online_pipeline_search.cpp  parallel_search.cpp  pipeline_et_search.cpp  pipeline_search.cpp  pthread_search.cpp  pthread_sync_search.cpp  search.cpp  single_query.cpp  tree_termination.cpp
